...
    <string name="action_map">Action Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="send_location">Send Location</string>
    <string name="login_success_title">Yeah!</string>
</resources>
